# tmu-labs

./: .gitignore  README.md
sheet01/: .gitignore  CMakeLists.txt  assessment.sh  helloworld.cpp
sheet02/: .gitignore  Dockerfile  README.md
sheet02/mandelbrot/: CMakeLists.txt  eval.sh  mandelbrot.cpp
sheet02/mandelbrot/tests/: test_mandelbrot.cpp
sheet02/simplevm/: CMakeLists.txt  simplevm.cpp
sheet02/simplevm/tests/: test_simplevm.cpp
sheet03/header-files/: CMakeLists.txt  math_operations.hpp  print_utils.hpp
sheet03/mistakes/: CMakeLists.txt  eval.sh  fixups.hpp
sheet04/sport/: CMakeLists.txt  sport.cpp  sport.hpp
sheet04/stockpiles/: CMakeLists.txt  stockpiles.cpp  stockpiles.hpp
sheet05/: README.md
sheet05/arithmetic/: complex.hpp  rational.hpp
sheet05/disjoint_sets/: disjoint_sets.cpp  disjoint_sets.hpp
sheet06/tempfs/: TempDirectory.cpp  TempDirectory.hpp  TempFile.cpp  TempFile.hpp
sheet07/: README.md
sheet07/binary-tree/: binary-tree.cpp  binary-tree.hpp
sheet07/binary-tree/tests/: test_binarytree.cpp
sheet08/bitset/: BitSet.cpp  BitSet.hpp  eval.sh
sheet08/bitset/tests/: test_bitset.cpp
sheet09/: .keep  README.md
sheet09/dataprocessing/: CMakeLists.txt  processing.hpp
sheet09/dataprocessing/tests/: test_processing.cpp
sheet09/dispatch/: CMakeLists.txt  expression.hpp
sheet09/dispatch/tests/: test_dispatch.cpp
sheet10/: .clang-tidy  .keep  README.md
sheet10/bump_alloc/: CMakeLists.txt  bump_alloc.cpp  bump_alloc.hpp
sheet10/bump_alloc/tests/: test_bump_alloc.cpp
sheet10/small_vector/: CMakeLists.txt  small_vector.cpp  small_vector.hpp
sheet10/small_vector/tests/: test_small_vector.cpp
sheet11/: .clang-format  .clang-tidy  .keep  README.md
sheet11/conceptual_serializer/: CMakeLists.txt  serializer.hpp  serializer_traits.hpp
sheet11/conceptual_serializer/tests/: test_conceptual_serializer.cpp  test_serializer_traits.cpp
sheet11/config_eval/: CMakeLists.txt  config_concept.hpp  eval.sh
sheet11/config_eval/tests/: test_config_eval.cpp
sheet12/: .clang-tidy  .keep  README.md
sheet12/ast/: CMakeLists.txt  ast.cpp  ast.hpp  ast_formatter.hpp  ast_visitor.hpp  evaluate_ast_visitor.cpp  evaluate_ast_visitor.hpp  evaluation_context.cpp  evaluation_context.hpp  format_ast_visitor.cpp  format_ast_visitor.hpp
sheet12/ast/tests/: test_ast.cpp  test_evaluate_ast_visitor.cpp  test_format_ast_visitor.cpp
sheet12/mixins/: CMakeLists.txt  base64.hpp  eval.sh  mixins.cpp  mixins.hpp  usage.hpp
sheet12/mixins/tests/: test_base64.cpp  test_usage.cpp
sheet13/: .keep  README.md
sheet13/coverage/: CMakeLists.txt  StringMatching.cpp  StringMatching.hpp  eval.sh
sheet13/coverage/tests/: test_coverage.cpp
sheet13/expenses/: CMakeLists.txt  eval.sh  expense-tracker.cpp  main.cpp
sheet13/expenses/tests/: test_expensetracker.cpp
sheet14/: .keep  README.md
sheet14/insertonlybag/: CMakeLists.txt  eval.sh  insertonlybag.hpp
sheet14/insertonlybag/tests/: test_insertonlybag.cpp
sheet14/parallel-ht/: CMakeLists.txt  eval.sh  multimap.cpp  multimap.hpp  parallel-multimap.cpp  parallel-multimap.hpp
sheet14/parallel-ht/tests/: test_multimap.cpp
